--- a/uksl/Views/Home/Contact.cshtml
+++ b/uksl/Views/Home/Contact.cshtml
@@ -13,5 +13,5 @@
 
 <address>
     @*<strong>Support:</strong>   <a href="mailto:Support@example.com">Support@example.com</a><br />*@
-    <strong>Email:</strong> <a href="mailto:uksl.gaming@gmail.com">uksl.gaming@gmail.com</a>
+    <strong>Email:</strong> <a href="mailto:ucsl.gaming@gmail.com">ucsl.gaming@gmail.com</a>
 </address>
