--- a/uksl/Views/Home/Index.cshtml
+++ b/uksl/Views/Home/Index.cshtml
@@ -17,44 +17,26 @@
             </div>
 
             <div class="item">
-                <img src="http://placehold.it/760x400/cccccc/ffffff">
+                <img src="~/Content/images/CSGO-Wallpaper.jpg">
                 <div class="carousel-caption">
-                    <h4><a href="#">Lorem ipsum dolor sit amet consetetur sadipscing</a></h4>
-                    <p>Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat.</p>
+                    <h4><a href="#news1">Особливі налаштування NVIDIA дозволяли бачити крізь дим</a></h4>
+                    <p>Днями користувачі reddit стали активно обговорювати функцію NVIDIA Freestyle для однойменних відеокарт. Її можна було налаштувати особливим чином, щоб бачити крізь димові гранати. Freestyle можна було користуватися два місяці, і про неї знали про-гравці. Тепер NVIDIA Freestyle більше не підтримує CS: GO. Про те, що сталося - в нашому матеріалі.</p>
                 </div>
             </div><!-- End Item -->
 
             <div class="item">
-                <img src="http://placehold.it/760x400/999999/cccccc">
+                <img src="~/Content/images/Steam.jpg">
                 <div class="carousel-caption">
-                    <h4><a href="#">consetetur sadipscing elitr, sed diam nonumy eirmod</a></h4>
-                    <p>Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat.</p>
-                </div>
-            </div><!-- End Item -->
-
-            <div class="item">
-                <img src="http://placehold.it/760x400/dddddd/333333">
-                <div class="carousel-caption">
-                    <h4><a href="#">tempor invidunt ut labore et dolore</a></h4>
-                    <p>Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat.</p>
-                </div>
-            </div><!-- End Item -->
-
-            <div class="item">
-                <img src="http://placehold.it/760x400/999999/cccccc">
-                <div class="carousel-caption">
-                    <h4><a href="#">magna aliquyam erat, sed diam voluptua</a></h4>
-                    <p>Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat.</p>
+                    <h4><a href="#news2">Як пройшов 2017 рік у Steam</a></h4>
+                    <p>Засновник SteamSpy Сергій Галенкін підготував звіт про продажі і активності користувачів в Steam за 2017 рік. За його даними, в минулому році в сервісі зареєструвалося 63 млн осіб - 22% від загального числа акаунтів.</p>
                 </div>
             </div><!-- End Item -->
         </div><!-- End Carousel Inner -->
 
         <ul class="list-group col-sm-4">
             <li data-target="#myCarousel" data-slide-to="0" class="list-group-item active"><h4>Alibaba просуває кіберспорт на Олімпіаду</h4></li>
-            <li data-target="#myCarousel" data-slide-to="1" class="list-group-item"><h4>Lorem ipsum dolor sit amet consetetur sadipscing</h4></li>
-            <li data-target="#myCarousel" data-slide-to="2" class="list-group-item"><h4>consetetur sadipscing elitr, sed diam nonumy eirmod</h4></li>
-            <li data-target="#myCarousel" data-slide-to="3" class="list-group-item"><h4>tempor invidunt ut labore et dolore</h4></li>
-            <li data-target="#myCarousel" data-slide-to="4" class="list-group-item"><h4>magna aliquyam erat, sed diam voluptua</h4></li>
+            <li data-target="#myCarousel" data-slide-to="1" class="list-group-item"><h4>Особливі налаштування NVIDIA дозволяли бачити крізь дим. Зараз цю функцію відключили</h4></li>
+            <li data-target="#myCarousel" data-slide-to="2" class="list-group-item"><h4>Як пройшов 2017 рік у Steam</h4></li>
         </ul>
         <!-- Controls -->
         <div class="carousel-controls">
@@ -90,6 +72,85 @@
             </p>
             <p>
                 Джерело: Telegram-канал "Кіберспорт | Індустрія"
+            </p>
+        </div>
+        <div id="news1">
+            <h2>
+                Особливі налаштування NVIDIA дозволяли бачити крізь дим. Зараз цю функцію відключили
+            </h2>
+            <p>
+                Днями користувачі reddit стали активно обговорювати функцію NVIDIA Freestyle для однойменних відеокарт. Її можна було налаштувати особливим чином, щоб бачити крізь димові гранати. Freestyle можна було користуватися два місяці, і про неї знали про-гравці. Тепер NVIDIA Freestyle більше не підтримує CS: GO. Про те, що сталося - в нашому матеріалі.
+            </p>
+            <p>
+                9 січня 2018 року NVIDIA представила технологію Freestyle для програми GeForce Experience. NVIDIA Freestyle - утиліта, яка дозволяє експериментувати з шейдерами в різних іграх і домагатися різного зображення на екрані. Важливо: гра не розпізнавала її як чіт, тому що Freestyle запускалася поза клієнта і не втручалася в файли гри. Власник каналу HypeR_MK на Youtube вдало порівняв NVIDIA Freestyle з набором фільтрів Instagram.
+            </p>
+            <p>
+                <img src="~/Content/images/news1_1.png" />
+            </p>
+            <p>
+                NVIDIA Freestyle - набір кольорових фільтрів для ваших ігор.
+                Користувачі NVIDIA Freestyle могли самостійно експериментувати з колірною гамою, різкістю і іншими параметрами. Як виявилося, певні настройки освітлювали темні кути на картах CS: GO, а інші розсіювали димові гранати .
+            </p>
+            <p>
+                <img src="~/Content/images/news1_2.png" />
+            </p>
+            <p>
+                6 березня Габріель FalleN Толедо жартома звернувся до учасника FPL Николе «Lobanjica» Мійомановічу, щоб той «допоміг SK Gaming з димами». Чорногорець відмовився і цілком резонно зауважив, що якщо цим будуть користуватися всі, то гра зламається. Жарти жартами, але виходить, що деякі про-гравці знали про цей експлойт і цілком могли ним користуватися.
+            </p>
+            <p>
+                Як з'ясувалося, вже кілька днів NVIDIA Freestyle більше не підтримує CS: GO, а значить користуватися фільтрами для гри більше не можна.
+            </p>
+            <p>
+                Проте сам експлойт все ще залишився - нічого не заважає написати подібну програму комусь іншому. Втім, чи потрібно це, коли в інтернеті за безцінь доступні більш просунуті чітерські програми?
+            </p>
+            <p>
+                <a href="https://www.reddit.com/r/GlobalOffensive/comments/828qv4/new_nvidia_settings_help_you_look_through_fading/">Посилання на джерело</a>
+            </p>
+        </div>
+        <div id="news2">
+            <h2>
+                Як пройшов 2017 рік у Steam
+            </h2>
+            <p>
+                Засновник SteamSpy Сергій Галенкін підготував звіт про продажі і активності користувачів в Steam за 2017 рік. За його даними, в минулому році в сервісі зареєструвалося 63 млн осіб - 22% від загального числа акаунтів. Велика частина приросту - за рахунок PUBG і її китайських фанатів
+            </p>
+            <p>
+                <img src="~/Content/images/news2_1.png" />
+            </p>
+            <p>Більше ніж будь-коли</p>
+            <p>
+                64% користувачів Steam - з Китаю, хоча офіційно доступ до сервісу в цій країні заборонено. З них лише 19% активно купують гри, а інші акаунти або занедбані, або використовуються в інтернет-кафе. Тому в Китаї набули 5,4% від загального числа товарів, проданих в Steam за 2017 рік. Як приклад Галенкін привів користувачів з США, які складають 13,9% від загальної аудиторії сервісу, - на них припадає 23,3% куплених ігор.
+            </p>
+            <p>
+                <img src="~/Content/images/news2_2.png" />
+            </p>
+            <p>
+                6 березня Габріель FalleN Толедо жартома звернувся до учасника FPL Николе «Lobanjica» Мійомановічу, щоб той «допоміг SK Gaming з димами». Чорногорець відмовився і цілком резонно зауважив, що якщо цим будуть користуватися всі, то гра зламається. Жарти жартами, але виходить, що деякі про-гравці знали про цей експлойт і цілком могли ним користуватися.
+            </p>
+            <p>
+                Китай: 19,5% активних гравців і 5,4% від загального числа покупок в Steam
+            </p>
+            <p>
+                Найбільший приріст геймерів з Китаю стався після релізу PUBG. До появи «королівської битви» від Bluehole Studio кількість користувачів Steam з цього регіону становило ~ 7%. При цьому китайці не купують багато ігор і в середньому витрачають по 16 годин на тиждень на PUBG.
+            </p>
+            <p>
+                <img src="~/Content/images/news2_3.png" />
+            </p>
+            <p>Кількість китайських користувачів та ігор, які вони купують</p>
+            <p>
+                <img src="~/Content/images/news2_4.png" />
+            </p>
+            <p>Америка - 7 годин в тиждень, Китай - 16 годин на тиждень</p>
+            <p>
+                Сергій Галенкін також підрахував, який прибуток отримала Valve в Steam за 2017 рік. Він враховував тільки продажу окремих продуктів - без DLC і внутрішньоігрових покупок. Всього компанія виручила $ 4,3 млрд, а безумовним лідером рейтингу стала PUBG: вона розійшлася 27,7 млн копій і принесла $ 600 млн. На другому місці розташувалася CS: GO - в 2017 році шутер придбали 12,5 млн разів.
+            </p>
+            <p>
+                <img src="~/Content/images/news2_5.png" />
+            </p>
+
+            <p>
+                З повною версією звіту Сергія Галенкін можна ознайомитися за 
+                <a href="https://www.reddit.com/r/GlobalOffensive/comments/828qv4/new_nvidia_settings_help_you_look_through_fading/">посиланням</a>.
             </p>
         </div>
     </div>
